--- a/src/views/HomePage/HomePage.module.css
+++ b/src/views/HomePage/HomePage.module.css
@@ -1,27 +1,30 @@
-.homePage {
-    text-align: center;
-    background-image: url('../../assets/images/background.png');
-    background-size: cover;
-    color: white;
-  }
-  
-  .mainSection {
-    padding: 4rem 0;
-  }
-  
-  .title {
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
-  }
-  
-  .subtitle {
-    font-size: 1.2rem;
-    margin-bottom: 2rem;
-  }
-  
-  .mainButton {
-    background-color: #00695c;
-    border: none;
-    color: white;
-  }
-  
+.homePageContainer {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1; /* Añadido para asegurar que el contenedor crezca */
+  text-align: center;
+  background-size: cover;
+  color: white;
+}
+
+.mainSection {
+  flex-grow: 1; /* Añadido para que esta sección ocupe el espacio disponible */
+  padding: 4rem 0;
+  /* Resto de tus estilos */
+}
+
+.title {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+.subtitle {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+}
+
+.mainButton {
+  background-color: #00695c;
+  border: none;
+  color: white;
+}
