--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #004d40;
+  background-color: var(--color-primary);
   color: white;
   text-align: center;
   padding: 1rem;
