--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   text-align: center;
-  display: flex; /* Añadido para implementar flexbox */
-  flex-direction: column; /* Añadido para alinear los elementos en columna */
-  min-height: 100vh; /* Añadido para asegurar que el App ocupe al menos toda la altura de la ventana */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -16,10 +16,6 @@
   }
 }
 
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -27,12 +23,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-body {
-  font-family: 'Roboto', sans-serif;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Montserrat', sans-serif;
 }
