--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,21 +1,20 @@
 .header {
-    background-color: #004d40;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem 2rem;
-  }
-  
-  .logo {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-  
-  .navItem {
-    margin-left: 1rem;
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  
+  background-color: var(--color-primary);
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 2rem;
+}
+
+.logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.navItem {
+  margin-left: 1rem;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
