--- a/src/views/HomePage/HomePage.module.css
+++ b/src/views/HomePage/HomePage.module.css
@@ -1,30 +1,27 @@
 .homePageContainer {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1; /* Añadido para asegurar que el contenedor crezca */
-  text-align: center;
-  background-size: cover;
-  color: white;
+  background-color: var(--background-content);
+  color: var(--text-color);
+  padding: 2rem;
 }
 
 .mainSection {
-  flex-grow: 1; /* Añadido para que esta sección ocupe el espacio disponible */
-  padding: 4rem 0;
-  /* Resto de tus estilos */
+  margin: 2rem 0;
 }
 
 .title {
-  font-size: 2.5rem;
+  color: var(--color-primary);
   margin-bottom: 1rem;
 }
 
 .subtitle {
-  font-size: 1.2rem;
+  color: var(--text-secondary-color);
   margin-bottom: 2rem;
 }
 
 .mainButton {
-  background-color: #00695c;
-  border: none;
+  background-color: var(--color-secondary);
   color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
 }
